email-tablet border-box to prevent overflowing parent container

--- a/pod-request-access-langing-page/styles/tablet.css
+++ b/pod-request-access-langing-page/styles/tablet.css
@@ -82,6 +82,9 @@ body{
     display: none;
 }
 
+.email-tablet{
+    box-sizing: border-box;
+}
 .email-tablet, .btn-req-access-tablet{
     width: 100%;
 }
